--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/preact",
-  "version": "0.11.0",
+  "version": "0.12.1",
   "description": "yet another atomic store library (preact)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -43,8 +43,8 @@
     "preact": ">=10"
   },
   "dependencies": {
-    "@yaasl/core": "0.12.0",
-    "@yaasl/utils": "0.11.0"
+    "@yaasl/core": "^0.12.1",
+    "@yaasl/utils": "^0.12.1"
   },
   "devDependencies": {
     "@testing-library/preact": "^3.2.4",
