--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/react",
-  "version": "0.12.0",
+  "version": "0.12.1",
   "description": "yet another atomic store library (react)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -43,8 +43,8 @@
     "react": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@yaasl/core": "0.12.0",
-    "@yaasl/utils": "0.11.0"
+    "@yaasl/core": "^0.12.1",
+    "@yaasl/utils": "^0.12.1"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.0",
