--- a/docs/package.json
+++ b/docs/package.json
@@ -18,7 +18,6 @@
     "prismjs": "^1.30.0"
   },
   "devDependencies": {
-    "docsify-cli": "^4.4.4",
-    "rimraf": "^6.0.1"
+    "docsify-cli": "^4.4.4"
   }
 }
