--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,12 +45,12 @@
     "react": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^16.3.0",
-    "@types/react": "^19.2.2",
+    "@testing-library/react": "^16.3.1",
+    "@types/react": "^19.2.7",
     "@yaasl/core": "^0.14.0-alpha.2",
     "@yaasl/utils": "^0.13.1",
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
