--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@pretty-cozy/release-tools": "^0.9.0-alpha.4",
     "@vitest/coverage-v8": "^4.0.16",
     "enquirer": "^2.4.1",
-    "jsdom": "^27.3.0",
+    "happy-dom": "^20.0.11",
     "npm-check-updates": "^19.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.1.2",
