--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/preact",
-  "version": "0.14.0",
+  "version": "0.15.0-alpha.0",
   "description": "yet another atomic store library (preact)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -40,13 +40,13 @@
     "validate": "run-s lint test build"
   },
   "peerDependencies": {
-    "@yaasl/core": "^0.14.0",
-    "@yaasl/utils": "^0.14.0",
+    "@yaasl/core": "^0.15.0-alpha.0",
+    "@yaasl/utils": "^0.15.0-alpha.0",
     "preact": ">=10"
   },
   "devDependencies": {
-    "@yaasl/core": "^0.14.0",
-    "@yaasl/utils": "^0.14.0",
+    "@yaasl/core": "^0.15.0-alpha.0",
+    "@yaasl/utils": "^0.15.0-alpha.0",
     "preact": "^10.28.0"
   },
   "lint-staged": {
