--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaasl/react",
-  "version": "0.14.0",
+  "version": "0.15.0-alpha.0",
   "description": "yet another atomic store library (react)",
   "author": "PrettyCoffee",
   "license": "MIT",
@@ -40,15 +40,15 @@
     "validate": "run-s lint test build"
   },
   "peerDependencies": {
-    "@yaasl/core": "^0.14.0",
-    "@yaasl/utils": "^0.14.0",
+    "@yaasl/core": "^0.15.0-alpha.0",
+    "@yaasl/utils": "^0.15.0-alpha.0",
     "react": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.1",
     "@types/react": "^19.2.7",
-    "@yaasl/core": "^0.14.0",
-    "@yaasl/utils": "^0.14.0",
+    "@yaasl/core": "^0.15.0-alpha.0",
+    "@yaasl/utils": "^0.15.0-alpha.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
