--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,9 @@
     "config:js-lib",
     "abandonments:recommended",
     "security:minimumReleaseAgeNpm",
-    "group:allNonMajor"
+    "group:allNonMajor",
+    "schedule:monthly",
+    ":disableRateLimiting"
   ],
   "major": {
     "dependencyDashboardApproval": true
